force-app/main/default/objects/Reply_Message__c/Reply_Message__c.object-meta.xml
<CustomObject>
    <label>Reply Message</label>
    <nameField>
        <displayFormat>RM-{0000}</displayFormat>
        <label>reply message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reply Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>