force-app/main/default/objects/Reply_Message__c/fields/Announcement__c.field-meta.xml
<CustomField>
    <fullName>Announcement__c</fullName>
    <label>Announcement</label>
    <referenceTo>Announcement__c</referenceTo>
    <relationshipLabel>Reply Messages</relationshipLabel>
    <relationshipName>Reply_Messages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>