force-app/main/default/objects/Reply_Message__c/fields/Reply_Message__c.field-meta.xml
<CustomField>
    <fullName>Reply_Message__c</fullName>
    <label>Reply Message</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>